# 3dp

./: .gitignore  3dp.cabal  Untitled.scad  ball20mm.stl  hscrew.stl  out12.stl  out15.stl  out17.stl  out18.stl  out6.gcode  out8.stl  sphere20-10.stl  test.stl  test2.stl  test3.stl
src/: Main.hs
