name: 3dp
version: 0.0.1
cabal-version: >=1.2
build-type: Simple
license: AllRightsReserved
license-file: ""
synopsis: 3d printing
description:  
data-dir: ""
 
executable 3dp
    build-depends: QuickCheck -any, base -any, implicit -any
    main-is: Main.hs
    buildable: True
    hs-source-dirs: src
 
test-suite test-3dp
    build-depends: QuickCheck -any, base -any, implicit -any
    type: exitcode-stdio-1.0
    main-is: Main.hs
    buildable: True
    cpp-options: -DMAIN_FUNCTION=testMain
    hs-source-dirs: src